syntax = "proto3";
package VrLifeShared.Networking.NetworkingModels;

message Skeleton {
	uint64 userId = 1;
	Coord bodyLocation = 2;
    Coord bodyRotation = 3;
    Coord head = 4;
    Coord neck = 5;
    Coord spine = 6;
    Coord hips = 7;
    Coord leftShoulder = 8;
    Coord leftArm = 9;
    Coord leftHand = 10;
    Coord rightShoulder = 11;
    Coord rightArm = 12;
    Coord rightHand = 13;
    Coord leftKnee = 14;
    Coord leftFoot = 15;
    Coord rightKnee = 16;
    Coord rightFoot = 17;
}

message GameObject {
	uint64 objectInstanceId = 1;
	Coord center = 2;
	bytes objectData = 3;
}

message Coord {
	float x = 1;
	float y = 2;
	float z = 3;
}